open5gs-webui-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: open5gs-webui-gateway
spec:
  selector:
    istio: ingressgateway # use istio default 
    controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: open5gs-webui
spec:
  hosts:
  - "*"
  gateways:
  - open5gs-webui-gateway
  http:
  - match:
    route:
    - destination:
        host: open-webui.open5gs.svc.cluster.local
        port:
          number: 80
